[MODORDERS-1321]. Add 'Suppress from discovery' toggle for instance interaction (#1140)
* [MODORDERS-1321]. Add 'Suppress from discovery' toggle for instance interaction

* [MODORDERS-1321]. Update acq-models